# CopperspiceSpiel

./: CMakeLists.txt  ReadME  main.cpp
Bilder/: Goblin.png:Zone.Identifier  Swordsman.png:Zone.Identifier  coin.jpg:Zone.Identifier  das5p99-4a954d14-181e-4b65-90b9-f91b2743c104.gif:Zone.Identifier  defm082-ed6a543f-6c8a-4142-8553-a431639863ce.gif:Zone.Identifier  dg85ue5-7ec4244b-c6ef-40d7-8a34-cbf8984b8902.png:Zone.Identifier  javier-goblin-pixel-art3.gif:Zone.Identifier
Save/: save.json
